# TrackerAircraft

./: LICENSE  README.md  main.py  pyproject.toml
data/: airplanes.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_2d10b41d7a07db3a___init___py.html  z_2d10b41d7a07db3a_aeroplaneABC_py.html  z_2d10b41d7a07db3a_aeroplane_py.html  z_2d10b41d7a07db3a_aeroplanesAPI_py.html  z_2d10b41d7a07db3a_jsonSaver_py.html  z_33ea1954bbe60e2e___init___py.html  z_33ea1954bbe60e2e_apiAdapter_py.html  z_33ea1954bbe60e2e_utils_py.html
src/model/: aeroplane.py  aeroplaneABC.py  aeroplanesAPI.py  jsonSaver.py
src/services/: apiAdapter.py  utils.py
tests/: test_aeroplane.py  test_apiAdapter.py  test_jsonSaver.py  test_utils.py
